Added to intro, added to DiRECT discussion, added in enrichment. Added to BMI platelet function chapter

--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -1,27 +1,76 @@
 # Background
 
-## Cardiovascular disease
-- Types, invidence, causes.
-- Clinical characterisation?
-- Overview of current risk factors - smoking, alcohol, age, male...
+This chapter will give a more extensive introduction to the themes covered within the results chapters.
 
-## Obesity is a risk factor for cardiovascular disease 
-- Current evidence.
-- Known mechanisms.
-- Gap - how platelets really are involved.
+## History of body mass index
+The term body mass index (BMI) is understood to have been defined in 1972 by Ancel Keys [@Blackburn2014]. This term was given to the ratio of weight in kilograms over the square of the height in metres. This measure of body fatness was found to be a good indicator of relative obesity. The link between obesity and adverse health outcomes had been reported in Ancient Greece [need ref]. It is thought that a link between BMI and mortality was identified in xx and the link between BMI and cardiovascular events was noticed in xx.
 
-## Platelets
-### Platelet biology 
-### Platelet activation
-### Sysmex parameters
+## Cardiovascular disease is now the leading cause of deaths worldwide
+Cardiovascular disease is one of the major causes of mortality in many countries, with over 18 million deaths attributed to cardiovascular disease (CVD) in 2019 and amounting to a third of all deaths [@BritishHeartFoundation2021]. Furthermore, global deaths from coronary heart disease (CHD) and stroke have also amounted to ~9 million and ~6.5 million deaths, respectively. Current known risk factors for cardiovascular diseases include smoking, physical inactivity, poor diet and high cholesterol [@Virani2021]. Overweight and obesity are also well established risk factors for cardiovascular disease and are now considered the leading years lived with disability and injury risk factors in the United States [@Virani2021]. The National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity.
 
-## Body mass index and platelets
-### Current evidence
-### Limitations and gaps
+## Mendelian randomisation can be used to explore causality
+Risk factors have often been identified through observational associations. Observational studies are often limited by confounding and reverse causation. Mendelian randomisation (MR) is a technique which uses the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT) [@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-statins), using low density lipoproteins-cholesterol (LDL-C) and cardiovsacular events as an example [@Bennett2017]. Here, single nucleotide polymorphisms (SNPs) can be used. As an example, people who have the G nucleotide may have lower LDL-C than people with an A nucleotide. As these alleles are randomly assorted, having either a G or an A nucleotide should not affect other factors such as whether you smoke or not. If those who have the G nucleotide also have lower rates of cardiovascular events, it is likely that the relationship between LDL-C and cardiovascular events is causal.
 
-## Possible mechanisms 
-### inflammation - can it be measured by the plasma proteome
-### Platelet primers
+```{r MR-statins, echo = FALSE, fig.cap="An example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events. Figure from Bennett et al., 2017.", fig.scap="Mendelian randomisation example using LDL levels and cardiovascular events"}
+include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = NA)
+```
+## The genetics of obesity
+There are strong correlations between BMI and more objective measures of fat mass measured by dual-energy X-ray absorptiometry (DXA) [@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Although environmental factors explain a large amount of variance in BMI, Yengo found 941 near-independent genetic variants which associate with BMI [@Yengo2018]. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations [@Yengo2018].
+
+## Higher BMI has a causal effect on ischaemic heart disease
+Various studies have found a link between adiposity and cardiovascular disease and ischaemic heart disease (IHD) risk through various study designs. For example, observational studies ... [@@Khan2018; @Nordestgaard2012], MR [@Nordestgaard2012; @Dale2017]. In particular, Nordestgaard et al. used single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate the effect of BMI on IHD, where they estimated that a 4kg/m^2^ increases the odds of IHD by 52%. Further, higher BMI has been shown to have a causal relationship with ischaemic stroke [@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE) [@Jimenez2021].
+
+## How does higher BMI cause increased risk of thrombosis?
+There is also extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL) [@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. Over time, LDLs retain in the arterial intima, which leads to an immuno-inflammatory response and development of atherosclerotic plaques. As these plaques develop, they become unstable and can rupture, thereby causing a myocardial infarction or ischaemic stroke [@Ference2017]. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD [@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors mediating this association.
+
+## Platelets are key cells in thrombosis - par1-ap thrombin etc
+Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis [@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Platelet activation also results in activation of integrins such as α~IIb~β~3~ and subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. These key platelet receptors are indicated in figure \@ref(fig:platelet-activation). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
+
+```{r platelet-activation, echo = FALSE, fig.cap="Key platelet receptors for platelet activation"}
+include_graphics(path = "figure/Intro_background/Platelet_activation.png", dpi = NA)
+```
+
+## Platelets are therapeutic targets for thrombosis
+When a patient has a clot in one of the coronary arteries, they often undergo percutaneous coronary intervention (PCI), which consists of inserting a catheter in order to place a stent to help remove the blockage. Following this, patients are commonly prescribed dual antiplatelet therapy (DAPT) [@Freynhofer2017a; @Nardin2015], which has shown to reduce occurrence of future myocardial infarction [@Khan2020]. Figure \@ref(fig:antiplatelet-drugs) shows the range of antiplatelet agents and their sites of action, however DAPT generally consists of aspirin and a P2Y12 antagonist such as clopidogrel or ticagrelor. 
+
+Why aren't they working ??
+
+```{r antiplatelet-drugs, echo = FALSE, fig.cap="Cartoon of the antiplatelet therapies and their sites of action", fig.scap="Antiplatelet drugs", out.width="70%"}
+include_graphics(path = "figure/Intro_background/Antiplatelet_drugs.png", dpi = NA)
+```
+
+As BMI is associated with increased rates of thrombotic events and platelets are one of the key cells involved in thrombosis, it is likely that platelets are hyperactive compared to people who have a BMI in the healthy range. Various studies have attempted to address this question. There is mixed evidence for an effect of BMI on platelet hyperactivity. For example, in patients who were treated with clopidogrel there was a positive association between BMI and platelet activation in response to the agonist ADP [@Nardin2015]. Studies looking at BMI and platelet function are often limited by small sample sizes and are often restricted to patients being on antiplatelet therapy [@Deharo2014; @Sibbing2007; @Pankert2014]. Less is known about the association between BMI and platelet function in the absence of antiplatelet therapies. 
+
+## Experimental techniques to measure platelet function
+Platelet function can be measured by various laboratory techniques. Light transmission aggregometry (LTA) quantifies aggregation by how much light passes through the sample. The more aggregation, the clearer the solution and the more light passes through and is detected. Other techniques commonly used include using fluorescently labelled antibodies to detect surface receptors. Measuring basal levels of receptors may give information about the function of the platelet. Some receptors increase their expression in response to platelet agonists (such as the integrin α~IIb~β~3~ and the adhesion receptor P-selectin) such as protease-activating receptor activating peptide 1 (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Another techniques which can provide useful information about platelets is measuring calcium mobilisation by using a fluorescent calcium indicator. Activation of various receptors causes downstream activation of phospholipase C (PLC). In turn, this causes intracellular calcium release [@Varga-Szabo2009]. Another marker of platelet activation is phosphatidylserine (PS) exposure. Under basal conditions, PS is mainly present in the inner leaflet of the phospholipid bilayer. Upon activation (e.g. dual stimulation by collagen and thrombin), the PS is becomes exposed on the outer surface of the membrane, thereby activating factors in the coagulation pathway [@Bevers1983]. Changes in PS exposure can be measured using a fluorescently labelled antibody. Techniques such as Western Blotting can be used to quantify the levels of total protein of phosphoprotein. This can therefore be used to explore changes in signalling in platelets under basal conditions, or after stimulation with an agonist. These methods are very well established, however they are often time consuming and expensive.
+
+## Platelet traits as proxies for platelet function
+Although there are not many large studies looking at platelet function, other measures of platelet characteristics are widely used in the clinic and among cohort studies. These charactertics are often reported as part of a routine full blood count. These include platelet count (PLT, absolute number of platelets), plateletcrit (PCT, the volume occupied by platelets), mean platelet volume (MPV) and platelet distribution width (PDW). These are often used as diagnostic tools, for example a low platelet count is demonstrative of thrombocytopenia and a high platelet count is known as thrombocytosis/thrombocythaemia. There is evidence that alterations in these parameters associate with platelet function. For example, higher platelet count has been shown to associate with increased platelet aggregation [@Wurtz2012]. Previous studies have explored the association between BMI and platelet paramteres. Some studies have foudn evidence for an association between BMI and both platelet count and mean platelet volume, however other studies have lacked evidence for an effect [@Furuncuoglu2016; @Han2018a; @Coban2005; @Heffron2018]. These observational studies may be subject to confounding, therefore it is unclear whether there is a causal effect of BMI on these platelet traits, or whether effects are due to other factors. Platelet traits have also been implicated in cardiovascular disease: there is MR evidence that higher platelet count contributes to the risk of ischaemic stroke [@Gill2018], thereby suggesting that these platelet parameters have functional and clinical relevance. 
+
+More recent haematology analysers such as the Sysmex XN series analysers can provide additional information about platelet structure. They use a combination of fluorescence and impedence flow cyotemtry. Additional readouts provided by these analyzers include immature platelet count (IPC, the number of immature platelets) as well as immature platelet fraction (IPF, the fraction of platelets which are immature), based on a gating of their forward scatter (FSC, size) and side fluorescence (SFL, an indicator of mRNA content) (Figure \@ref(fig:sysmex-ipf) [@Corpataux2020]). Immature platelets, or reticulated platelets, are the youngest platelets in circulation. They persist for between 24 and 36 hours [@Corpataux2020]. Immature platelets are larger in size and have more mRNA than older circulating platelets. Over time the mRNA degrades and they gradually decrease in size. There are various studies which have suggested that a larger number of immature platelets may increase the risk of suffering from major adverse cardiovascular events (MACE) [@Ibrahim2014]. This suggests that immature platelets may be more reactive.
+
+```{r sysmex-ipf, echo = FALSE, fig.cap="Scatterplot of the forward scatter (FSC) and side fluorescence (SFL) of platelets from a Sysmex haematology analyser. PLT-F = fluorescent platelet count, IPF = immature platelet fraction, RBC = red blood cells, WBC = white blood cells. Figure from Corpataux et al.", fig.scap="Scatterplot of the forward scatter and side flourescence of platelets and immature platelets from a Sysmex analyzer"}
+include_graphics(path = "figure/Intro_background/Sysmex_IPF.png", dpi = NA)
+```
+
+## Mechanisms of obesity-related disease
+It is not fully understood how a high BMI might lead to changes in platelet function. Obesity commonly presents with a state of low-grade chronic inflammation, characterised by increases in interleukin-6 (IL-6) and tumour necrosis factor-α (TNF-α) [@Esser2014]. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects [@Cercato2019; @Kern2001]. Previous studies have identified a causal link between higher BMI and higher circulating levels of the inflammatory molecule C-reactive protein (CRP) [@Timpson2011]. More recent studies have used MR and have found an effect of BMI on a range of cytokines [@Kalaoja2021]. It is likely that the composition of inflammatory molecules may have downstream effects on platelets.
+
+## Platelet primers
+Platelets express receptors for various circulating proteins. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1) [@Frystyk1995] and thrombopoietin (TPO) [@Maury2010a; @Blair2015]. There is evidence that other chemokines may be able to activate platelets. The CCR4 receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17) [@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI increases the circulating levels of MDC [@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets, inducing aggregation and calcium mobilisation [@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway [@Blair2015; @Pasquet2000]. In turn, this leads to phosphorylation and activation of protein kinase B (PKB/Akt) and an increase in aggregation [@Hemmings2015]. Another pathway which is important for platelet priming is the mitogen activated protein kinase (MAPK) pathway, in particular, the extracellular related kinases (ERKs) [@Ezumi1998]. It is possible that these pathways are also important in signalling via CCR4.
+
+## Evaluating the plasma proteome may reveal mechanistic insight into obesity-related diseases
+Through literature searches, there is evidence for an association between BMI and chemokines [@Kitahara2014]. Many studies so far have had hypothesis driven approaches when looking at the effect of BMI on circulating protein levels [@Timpson2011]. This is due to the often limited range of protein detection assays, such as enzyme-linked immunosorbent assays (ELISAs). Downstream health outcomes as a result of higher BMI are likely to occur as a result of a global change in protein composition, rather than as a result of individual proteins. Recent technologies have now been developed which allow protein detection in unprecedented scope and detail, for example the SOMAscan by SomaLogic [@Gold2012], which can detect around 4000 unique proteins. Studies that have attempted to characterise the plasmsa proteome of higher BMI have often only been in an observational framework [@Cominetti2018]. As the majority of druggable targets are proteins, it is valuable to explore the effects of BMI on circulating plasma proteins. It is estimated that 25% of proteins in the human proteome circulate in the blood [@Imming2006], including enzymes, protein kinases and transport proteins. Therefore, focusing on effects of adiposity on the circulating proteome may allow for the development of or repurposing of therapeutic interventions to reduce obesity-related disease.
+
+## Importance of interdisciplinary methods
+Each experimental approach used when trying to answer hypotheses has biases and limitations. For example, using basic science it is possible to determine effects _in vitro_ or _ex vivo_, however it is difficult to fully understand how findings might translate in a clinical setting. Similarly, observational studies can provide useful clinical information, but these can generally only be used to identify correlation, not causation. Randomised control trials (RCTs) are considered the gold standard way to determine efficacy and causality, especially in drug trials, however these trials are often time consuming and expensive [@Bennett2017]. To overcome this issue, MR utilises genetic information to be able to provide causal estimates. MR is widely utilised since the cost of sequencing genomes has become more affordable. Therefore, a combination of laboratory experiments, observational clinical studies, RCTs and MR can therefore help to provide separate sources of evidence in investigating mechanisms of disease.
+
+
+Other things to cover:
+- MR, genetic risk scores, RCTs - how much depth to go into?
+- 
+
+
 
 ## Interdisciplinary methods - MR, RCTs, lab work
 
