--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -1,6 +1,6 @@
 # The effect of obesity on platelet function: a clinical pilot study {#BMI-platelets-clinic}
 
-The following results section is a clinical study. Recruitment into this study has been severely affected by COVID-19: approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams due to time constraints when receiving patient samples. The proteomic data was analysed by the Proteomics facility at the University of Bristol.  
+The following results section is a clinical study. Recruitment into this study has been severely affected by COVID-19: approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams and the Sysmex haematology analyzer data was collected by Dr Kate Burley, due to time constraints when receiving patient samples. The proteomic data was analysed by the Proteomics facility at the University of Bristol.  
 
 Comment RE some of the methods I wrote for the COVID-19 manuscript are included here. May need to link if the COVID-19 paper is online when submitting.
 
@@ -8,7 +8,7 @@ Comment RE some of the methods I wrote for the COVID-19 manuscript are included 
 
 As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis [@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was positively associated with whole blood platelet aggregation in a cardiac surgery cohort. Although this suggests that higher BMI leads to platelet hyperactivity, this association was not directly assessed. 
 
-Upon activation platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function [@Paniccia2015]. Experiments include flow cytometry which uses fluorescently tagged antibodies that bind to platelet receptors, some of which are increasingly exposed upon stimulation by known platelet agonists such as protease activated receptor-1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Other experiments commonly used include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation [@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein levels. 
+Upon activation platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function [@Paniccia2015]. Experiments include flow cytometry which use fluorescently tagged antibodies that bind to platelet receptors, some of which are increasingly exposed upon stimulation by known platelet agonists such as protease activated receptor-1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Other experiments commonly used include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation [@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein levels. 
 
 Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling [@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007], where there is mixed evidence regarding how BMI affects platelet function. Previous studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy.
 
@@ -18,13 +18,10 @@ Therefore, the aims of this chapter were to:
 2) Determine whether higher BMI is associated with: an increase in immature platelet count, an increase in platelet function and an alteration in platelet signalling by comparing platelets from bariatric patients (BMI >40kg/m^2^) to healthy controls (BMI 18-25kg/m^2^).
 
 ## Methods
-The methods specific to this study are provided below. Details of materials, methods and statistical analyses also used in Chapter \@ref:(chemokine-platelets) provided in Chapter \@ref(common-methods). 
+The platelet function methods and statistical analyses utlised within this study are provided in the Methods chapter (Chapter \@ref(common-methods)).
 
 ### Study population
 This study was approved by the London Riverside Research Ethics Committee. All participants provided written informed consent. Patients, who were due to undergo bariatric surgery, with a body mass index of >40kg/m^2^, were recruited from the Department of Bariatric and Metabolic Surgery at Southmead Hospital, Bristol. Participants with a BMI between 18 and 25 kg/m^2^ were recruited from the University of Bristol. Inclusion criteria for participants were: aged 18 years and over and able to give written informed consent. Participants were excluded if they were pregnant or lactating, had any known clotting or bleeding disorders (e.g. von Willebrand disease or drug-induced thrombocytopenia), or if they had taken any antiplatelet medication within the previous 14 days such as clopidogrel, ticagrelor or aspirin or any other non-steroidal anti-inflammatory drug (NSAID). Recruitment occurred between May and June 2021. As a pilot study, a total of four bariatric patients with obesity and four control participants were recruited. Bariatric patients donated blood before bariatric surgery.
-
-### Platelet parameters measured by Sysmex
-Citrated whole blood (200 uL) was analysed using the Sysmex XN-20 haematology analyser. Platelet readouts were platelet count (PLT), immature platelet fraction (IPF), immature platelet count (IPC), side fluorescence (SFL, a measure of mRNA content), forward scatter (FSC, a measure of platelet size), side scatter (SSC, a measure of granularity).
 
 ## Results
 
@@ -133,25 +130,19 @@ include_graphics(path = "figure/Bariatric_study/volcano_proteomics_labelled.pdf"
 
 ```
 
-### Ingenuity pathway analysis enrichment
-
-Add this in?? Although IPA results really difficult to interpret, especially with small N...
-
 ## Discussion
 
-This chapter has explored the effect of obesity on platelet parameters and platelet function. Here, I have optimised common experimental laboratory techniques for use within a patient study. These experiments have been used to look at platelet function within other patient groups (e.g. COVID-19) and can be implemented in future patient studies. The study did not detect any functional differences in platelets from bariatric patients compared to healthy controls, but proteomics analysis by TMT-MS detected differences in platelet protein abundance, which may have implications for platelet signalling. 
+This chapter has explored the effect of obesity on platelet parameters and platelet function by collecting samples from bariatric patients and controls. Here, I have optimised common experimental laboratory techniques for use within a patient study. These experiments have been used to look at platelet function within other patient groups (e.g. COVID-19) and can be implemented in future patient studies. The study did not detect any functional differences in platelet parameters and function from bariatric patients compared to healthy controls, but proteomics analysis by TMT-MS detected differences in platelet protein abundance, which may have implications for platelet signalling. 
 
-This study did not detect differences in platelet characteristics such as IPC. Although there was no statistical evidence, the standard deviation was too large to determine a difference. There was also no evidence for a difference in levels of platelet receptors under basal conditions, nor differences in levels of platelet receptors after stimulation with platelet agonists. This is in contrast to previous studies, which detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation [@Barrachina2019]. Barrachina et al. did not directly measure the integrin α~IIb~β~3~ in response to CRP. A larger sample size would be required to be able to draw conclusions here. Aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to the time and large amount of sample required.
+This study did not detect differences in platelet characteristics such as IPC when comparing the high BMI bariatric surgery group with the control group. This small sample size and large standard deviation in the high BMI group would explain why a BMI and IPC association was detected in Chapter \@ref(BMI-platelets-INTERVAL) but wasn't in the current study. There was also no evidence for a difference in levels of platelet receptors under basal conditions, nor differences in levels of platelet receptors after stimulation with platelet agonists. This is in contrast to previous studies, which detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation [@Barrachina2019]. Barrachina et al. did not directly measure the integrin α~IIb~β~3~ in response to CRP. A larger sample size would be required to be able to draw conclusions here. Aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to the time and large amount of sample required.
 
-The principal component analysis suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI, however it could also be due to other factors which differed across groups such as previous COVID-19 infection. Comparing the proteins which were altered with previous studies also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the currenty study when comparing to three previous studies that have looked at the platelet proteome [@Barrachina2019], platelet microvesicle proteome [@Grande2019] and platelet transcriptome in relation to obesity [@Freedman2010]. 
-
-A post hoc sample size calculation was performed to determine how many participants would be required to detect a 10% protein change based on the median protein expression and standard deviation observed in the proteomics analysis, to obtain a power value of 0.8. This analysis suggested that a total of 19 participants (9 and 10 in each group) would be required, based on an alpha of 0.05.
+The principal component analysis suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI, however it could also be due to other factors which differed across groups such as previous COVID-19 infection or T2D diagnosis. Comparing the proteins which were altered with previous studies also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the current study when comparing to three previous studies that have looked at the platelet proteome [@Barrachina2019], platelet microvesicle proteome [@Grande2019] and platelet transcriptome in relation to obesity [@Freedman2010]. This points towards platelet proteins which may be altered with obesity such as actin and septin-2. Actin is important in platelet shape change and activation [@Bearer2002; @Barrachina2019]. Higher actin levels in platelets from patients with obesity could contribute to platelet hyperactivity. Mutations in the gene which encodes actin (ACTB) can cause Baraitser-Winter Cerebrofrontofacial syndrome (BWCFF). Patients with this syndrome have been reported to have a low platelet count (thrombocytopenia) with enlarged platelets and a greater immature platelet fraction [@Latham2018]. This actinopathy is known as ACTB-associated syndromic thrombocytopenia. It is therefore possible that increased levels of actin may be indicative of more newly produced platelets. Septins are cytosolic proteins which are also reported to be important in integrin α~IIb~β~3~activation, platelet spreading and clot contraction [@Kim2020]. Recombinant human gelsolin has been shown to be protective against thromboembolism in mice, thereby suggesting that reduced levels seen in the current study could increase thrombosis risk [@Gupta2019]. It would be informative to replicate associations in independent cohorts and to characterise the function of these proteins.
 
 ```{r proteome-lit,  echo=FALSE}
  options(knitr.kable.NA = "")
  paper = c("GPVI surface expression and signalling pathway activation are increased in platelets from obese patients: Elucidating potential anti-atherothrombotic targets in obesity", "Platelet-Derived Microparticles From Obese Individuals: Characterization of Number, Size, Proteomics, and Crosstalk With Cancer and Endothelial Cells", "Relation of platelet and leukocyte inflammatory transcripts to body mass index in the Framingham heart study")
  author = c("Barrachina et al., 2019", "Grande et al., 2019", "Freedman et al., 2010")
- findings = c('')
+ findings = c('Proteins altered: Actin, cytoplasmic 1 (Fragment), Septin-2, Gelsolin, Glycerol-3-phosphate dehydrogenase', 'Platelet microvesicle proteins altered: LIM and senescent cell antigen-like containing domain protein 1', 'Platelet transcripts altered: myeloperoxidase (MPO), S100-A9')
  mytable = cbind(paper, author, findings)
   colnames(mytable) <- c("Paper", "Author, year", "Study summary")
  mytable %>% kable(caption = "Summary of current literature on the effect of body mass index on the plasma proteome", booktabs = TRUE) %>% 
@@ -159,36 +150,14 @@ A post hoc sample size calculation was performed to determine how many participa
    #kable_paper("hover", full_width = F)
   kable_styling(full_width = TRUE) %>%
  column_spec(3, width = "7cm") %>%
-   column_spec(2, width = "2cm") %>%
-     column_spec(1, width = "2cm") %>%
+   column_spec(2, width = "3cm") %>%
+     column_spec(1, width = "5cm") %>%
    landscape()
 ```
+There is also overlap between proteins altered with BMI in the current study and transcripts that are reported to be altered with higher BMI [@Freedman2010]. For example, S100A9 (Myeloid-related protein-14 or MRP-14) platelet transcripts were altered with BMI and the levels of the protein were increased in the bariatric group in the current study. Studies in mice have found evidence that S100A9 is involved in thrombus formation [@Wang2014a], and there is evidence for its involvement in myocardial infarction [@Cai2020]. Likewise, myeloperoxidase (MPO) transcripts were associated with BMI and there were higher protein levels in bariatric patients with obesity. A previous study has shown evidence that MPO can potentiate ADP-induced platelet aggregation in PRP [@Gorudko2013].
 
-Proteomics notes
-Widely available two sample MR results which look at the effect of plasma proteins on BMI. Although this is not from platelet samples, these results may provide some insight as how higher levels of proteins might affect BMI.
+These platelet proteins have previously been reported to be associated with BMI and are therefore more likely to be robust associations. This study has also provided some novel platelet proteins which have different levels in bariatric patients with obesity compared with healthy weight controls. For example, there was an increase in levels of APMAP in platelets from the high BMI group. A SNP which is associated with higher levels of APMAP (rs8125909) is associated with higher BMI and greater weight [@Liu2021], therefore it is possible that the protein is involved in weight regulation, rather than higher BMI altering levels of the protein. There was also a decrease in levels of G protein-coupled receptor kinase (GRK6) in the high BMI group. GRKs phosphorylate G protein coupled receptors (GPCRs) that have been activated by agonists, thereby leading to receptor desensitisation [@Chaudhary2020]. GRK6 knockout mice have been shown to have larger aggregatory responses to agonists and more dense and alpha granule secretion, along with increased thrombus formation [@Chaudhary2020] as a result of less receptor desensitisation occurring. These results therefore reflect a platelet proteomic footprint of higher BMI that implicates a hyperactive platelet environment. It would be informative to look at additional measures of platelet activation such as platelet aggregation and calcium mobilisation and to replicate experiments in a larger cohort.
 
-Proteins in agreement with Barrachina:
-- Actin, cytoplasmic 1 (Fragment) (0.51, 0.03). Mutations in ACTB have been shown to coincide with enlarged, immature platelets.
-- Septin-2 (0.14 FC, p=0.03)
-- Gelsolin (-0.14, p=0.02)
-- Glycerol-3-phosphate dehydrogenase (-0.14 FC, p=0.01)
-- Lysozyme C opposite direction (increased in current analysis but Barrachina suggests reduction).
-- Few protein overlaps, however, we did not see an increase in GPVI levels or activation through GPVI using flow cytometry. Barrachina do not directly look at aIIbB3 integrin function.
+A post hoc power calculation was performed to determine the range of power for the effect sizes where p<0.05. This study had at least 67% power to detect effect sizes, but for some proteins which had the smaller p values, there was 100% power. A larger sample size would be required to be able to detect smaller effect sizes.
 
-Comparison with changes in platelet microvesicle proteome: 
-- [@Grande2019]
-- reduction in LIM and senescent cell antigen-likecontaining domain protein 1
- (FC -0.17, p=0.013).
- - No other proteins also replicated here (although these are overall platelet not microparticles)
- 
- Platelet transcript "Relation of Platelet and Leukocyte Inflammatory Transcripts to Body Mass Index in the Framingham Heart Study". [@Freedman2010] Genes in common
- - MPO, s100a9, 
-
-
-- Barrachina - proteins differentially regulated in obese v lean. Upregulated in obese = actin, albumin, fibrinogen beta chain,  fibrinogen gamma chain, integrin aiib, protein phosphatase 1 regulatory subunit 7, septin-2, thrombospondin-1, thioredoxin-like protein 1, thymidine phosphorylase, vinculin, negative: aflatoxin b1 aldehyde reductase member 2, dynactin subunit 2, dihydropyrimidinase-related protein 2, gelsolin,  Glycerol-3-phosphate dehydrogenase mitochondrial, Delta-aminolevulinic acid dehydratase, Heat shock protein beta-1, Lysozyme C,
-PDZ and LIM domain protein 1, Protein disulfideisomerase A6, Phosphoglucomutase2, Phosphatidylinositol 5-phosphate 4-kinase type-2 alpha, septin-11, stress-induced phosphoprotein 1, tropomyosin alpha-1 chain, Vacuolar protein sorting-associated protein 37B, zyxin
-
-- EpigrpahDB - two sample MR results for APMAP raising body mass index and weight. Therefore BMI may not be causing it, but association other way round. https://www.epigraphdb.org/pqtl/APMAP
-
-
-
+Overall, this study optimised experimental techniques to test platelet function from patients. Samples sizes were limited and no differences were detected in platelet function experiments and Sysmex parameters. Platelet proteomic analysis replicated previous findings in relation to proteins which may be altered by BMI and implicated some novel proteins which are altered by BMI and may lead to changes in platelet function. Larger sample sizes of participants which display more similar characteristics (e.g. similar proportion of participants had previous COVID-19 infection) would be required to confirm findings. 
