--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -23,10 +23,10 @@ include_graphics(path = "figure/DiRECT/DiRECT_study_summary.png", dpi = NA)
 ```
 
 ### Included variables
-Age and sex were self-reported. Height was measured with the Frankfort plane horizonal with a protable stadiometer (Chasmors Ltd, London). Weight was measured using Class 111 approved calibrated scales (Marsden Group UK). Blood was donated at various timepoints including at baseline (week 0) and at 1 year (week 52), where HDL cholesterol, tryglycerides, HbA1c and plasma glucose were measured. Systolic blood pressure was measured with the patient seated, rested and with legs uncrossed for ≥5 mins. BMI was calculated by dividing the weight (kg) by the square of the height (m). BMI change was calculated by subtracting BMI at baseline from BMI at 1 year. This BMI change was rank normal transformed (function rntransform() from "moosefun" R package https://github.com/hughesevoanth/moosefun/). The centre attended and list size of the practice (>5700 or ≤5700) determined whether participants were allocated to control or intervention and therefore were recorded.
+Age and sex were self-reported. Height was measured with the Frankfort plane horizonal with a protable stadiometer (Chasmors Ltd, London). Weight was measured using Class 111 approved calibrated scales (Marsden Group UK). Blood was donated at various timepoints including at baseline (week 0) and at 1 year (~week 52), where HDL cholesterol, tryglycerides, HbA1c and plasma glucose were measured. Systolic blood pressure was measured with the patient seated, rested and with legs uncrossed for ≥5 mins. BMI was calculated by dividing the weight (kg) by the square of the height (m). BMI change was calculated by subtracting BMI at baseline from BMI at 1 year. This BMI change was rank normal transformed (function rntransform() from "moosefun" R package https://github.com/hughesevoanth/moosefun/). The centre attended and list size of the practice (>5700 or ≤5700) determined whether participants were allocated to control or intervention and therefore were recorded.
  
 ### Proteomics
-Plasma samples were taken from participants at baseline at and 1-year post-randomisation. Protein detection was performed by the SomaScan assay by SomaLogic. As mentioned before, this technique uses Slow Off-rate Modified Aptamers (SOMAmers) which make direct contact with proteins and quantifies protein levels by using a DNA microarray [@Rohloff2014]. There were 5284 proteins included in the array, of which 4601 proteins passed internal quality control checks. The proteomic data was further cleaned using the "metaboprep" R package [@Hughes2021], with protein levels from both timepoints all QC'd together. This R package identified no extreme missingness, removed outliers based on principal component analyses and calculated the number of independent proteins by using pairwise correlation coefficients between proteins (869 representative proteins). The package also implemented the Shapiro-Wilk test and took the W statistic to identify proteins which have a normal distribution (W≥0.95). Only 399 proteins had W statistics ≥0.95. This data was then log2 transformed to match protein transformation by Sun et al. [@Sun2018] then adjusted for age and sex (data had already undergone technical adjustment). Protein change was calculated for each individual by subtracting the baseline protein levels from protein levels at one-year. These protein change values were rank normal transformed.
+Plasma samples were taken from participants at baseline at and 1-year post-randomisation. Protein detection was performed by the SomaScan assay by SomaLogic. As mentioned before, this technique uses Slow Off-rate Modified Aptamers (SOMAmers) which make direct contact with proteins and quantifies protein levels by using a DNA microarray [@Rohloff2014]. There were 5284 proteins included in the array, of which 4601 proteins passed internal quality control checks. The proteomic data was further cleaned using the "metaboprep" R package [@Hughes2021], with protein levels from both timepoints all QC'd together. This R package identified no extreme missingness, removed outliers based on principal component analyses and calculated the number of independent proteins by using pairwise correlation coefficients between proteins (869 representative proteins). The package also implemented the Shapiro-Wilk test and took the W statistic to identify proteins which have a normal distribution (W≥0.95). Only 399 proteins had W statistics ≥0.95. This data was then log~2~ transformed to match protein transformation by Sun et al. [@Sun2018] then adjusted for age and sex (data had already undergone technical adjustment). Protein change was calculated for each individual by subtracting the baseline protein levels from protein levels at one-year. These protein change values were rank normal transformed.
 
 ### Statistical analysis
 
@@ -34,7 +34,7 @@ Analyses were performed using R version 3.6.1.
 
 A total of 265 participants were included in the current analysis. Participant baseline characteristics were summarised as the mean and SD. Baseline characteristics were calculated for both control group (N=146) and intervention (N=119) and were compared across groups using either a two-tailed t-test or a Chi^2^ test. 
 
-The associations between BMI change and protein changes were explored using multiple linear regression adjusting for centre, list size, age and sex (function lm() from base R "stats" package). Due to the nature of linear regression, outputs of regression provide the mean individual change in protein (in SDs) per SD increase in BMI. Therefore if more weight loss reduces the levels of protein, the beta coefficient is positive [@Figarska2020]. The association between potential confounders (age and sex) and both exposure (BMI change) and outcome (protein change) were explored using linear regression. The difference in BMI change in intervention group compared to control was performed using linear regression, adjusting for centre, list size, age and sex. Covariables (age, sex, centre and list size) were compared across treatment groups. Treatment group was therefore used as an instrument for BMI change in a two stage least squares analysis \@ref(fig:direct-tsls) to estimate the effects of BMI change on protein change using ivreg() function from the "AER" R package (https://github.com/cran/AER/blob/master/R/ivreg.R). As a sensitivity analysis, for proteins which associate with BMI change, baseline protein levels were compared across control and intervention groups. P values were adjusted for multiple testing based on the number of representative proteins (0.05/869 = 5.8x10^-5^). 
+The associations between BMI change and protein changes were explored using multiple linear regression adjusting for centre, list size, age and sex (function lm() from base R "stats" package). Due to the nature of linear regression, outputs of regression provide the mean individual change in protein (in SDs) per SD increase in BMI. Therefore if more weight loss reduces the levels of protein, the beta coefficient is positive [@Figarska2020]. The association between potential confounders (age and sex) and both exposure (BMI change) and outcome (protein change) were explored using linear regression. The difference in BMI change in intervention group compared to control was performed using linear regression, adjusting for centre, list size, age and sex. Covariables (age, sex, centre and list size) were compared across treatment groups. Treatment group was therefore used as an instrument for BMI change in a two stage least squares analysis \@ref(fig:direct-tsls) to estimate the effects of BMI change on protein change using the ivreg() function from the "AER" R package (https://github.com/cran/AER/blob/master/R/ivreg.R). As a sensitivity analysis, for proteins which associate with BMI change, baseline protein levels were compared across control and intervention groups. P values were adjusted for multiple testing based on the number of representative proteins (0.05/869 = 5.8x10^-5^). 
 
 (ref:scaption-direct-tsls) Schematic of two stage least squares analysis
 (ref:caption-direct-tsls) Schematic of two stage least squares analysis
@@ -43,7 +43,7 @@ include_graphics(path = "figure/DiRECT/DiRECT_analysis.png", dpi = NA)
 
 ```
 
-BMI change-protein change estimates from the multiple linear regression analyses and two stage least squares analyses were compared using linear regression. In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in the current analyses was also performed using a linear regression. There were 2803 unique proteins overlapping across the two cohorts. Estimates across the two cohorts were compared using a Deming regression. 
+BMI change-protein change point estimates from the multiple linear regression analyses and two stage least squares analyses were compared using linear regression. In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in the current analyses was also performed using a linear regression. There were 2803 unique proteins overlapping across the two cohorts. Estimates across the two cohorts were compared using linear regression. 
 
 Enrichment or two sample MR of proteins of interest? epigraph DB....
 
@@ -93,7 +93,7 @@ include_graphics(path = "figure/DiRECT/Intervention_BMI_change_boxplot.png", dpi
 Treatment group was used as an instrument for BMI change in a two-stage least squares analysis. After adjustment for multiple testing, BMI change was associated with changes in levels of 171 proteins (3.7 %). The protein which showed the strongest association with BMI change was SCAR5 (-0.91 SDs per SD increase in BMI, 95% CI -1.07 to -0.75, p=1.54x10^-23^). Other proteins displayed a positive association with BMI change, including Fatty acid-binding protein, heart (FABP1, 0.86 SDs increase per SD increase in BMI, 95% CI 0.69-1.04, p=6.3x10^-19^). Aminoacyclase-1 was also positively associated with BMI change (0.80 SDs increase in protein per SD increase in BMI, 95% CI 0.64 to 0.97, p=4.9x10^-18^).
 
 ### Comparison of observational linear regression and TSLS results for the effect of BMI change on protein change
-A total of 110 proteins were only associated within the observational linear regression model, whereas 27 proteins were only associated in the TSLS analysis using treatment group as an instrument for BMI change. 144 proteins were associated with BMI in both analyses (\@ref(fig:circos)), with largest effect estimates across methods for SCAR5, Adiponectin, Apolipoprotein F, growth hormone receptor (GHR), receptor-type tyrosine-protein phosphatase U (PTPRU) and sex hormone binding globulin. These can be seen in Figure \@ref(fig:scatter-DiRECT). 
+A total of 110 proteins were only associated within the observational linear regression model, whereas 27 proteins were only associated in the TSLS analysis using treatment group as an instrument for BMI change. 144 proteins were associated with BMI in both analyses (\@ref(fig:circos)), with largest effect estimates across methods for SCAR5, Adiponectin, Apolipoprotein F, growth hormone receptor (GHR), receptor-type tyrosine-protein phosphatase U (PTPRU) and sex hormone binding globulin. These can be seen in Figure \@ref(fig:scatter-DiRECT). Of these 144 BMI change-protein change associations that were consistent across both models, 121 were positive, where weight loss led to a reduction in levels of the protein.
 
 (ref:scaption-circos) Circos plot of proteins associated with BMI change
 (ref:caption-circos) Circos plot displaying the protein change (SDs) per SD increase in BMI in DiRECT, where the blue estimates are the two stage least squares estimates and the yellow estimates are from the multiple linear regression. Proteins presented were associated in both models at p=5.8x10^-5^
@@ -112,9 +112,8 @@ include_graphics(path = "figure/DiRECT/DiRECT_scatter_comparison.pdf", dpi = NA)
 ### Sensitivity analysis
 Proteins which were associated with BMI change were compared across control and intervention groups at baseline. There was not strong evidence for any differences in baseline levels of proteins (p<5.8x10^-5^). 
 
-
 ### Comparison of BMI effects across DiRECT and INTERVAL
-BMI-protein estimates from this study were compared with effect estimates from INTERVAL (Chapter \@ref(BMI-protein-MR)). Both cohorts provided evidence for an effect of BMI on a range of proteins. Figure \@ref(fig:DiRECT-INTERVAL) shows the BMI-protein estimates for the proteins which were included in both DiRECT and INTERVAL. There was consistent evidence across both studies for a BMI-increasing effect on proteins including fumarylacetoacetase (FAAA), alcohol dehydrogenase 4 (ADH4), growth hormone receptor (GHR) and carboxypeptidase M (CBPM). Furthermore, higher BMI had a lowering effect on levels of sex hormone binding globulin (SHBG), as well as insulin-like growth factor binding protein 1/2 (IGFBP1/2). 
+BMI-protein estimates from this study were compared with effect estimates from INTERVAL (Chapter \@ref(BMI-protein-MR)). Both cohorts provided evidence for an effect of BMI on the plasma proteome. Figure \@ref(fig:DiRECT-INTERVAL) shows the BMI-protein estimates for the proteins which were included in both DiRECT and INTERVAL. There was consistent evidence across both studies that higher BMI leads to higher levels of various proteins including fumarylacetoacetase (FAAA), alcohol dehydrogenase 4 (ADH4), growth hormone receptor (GHR) and carboxypeptidase M (CBPM). Furthermore, higher BMI had a lowering effect on levels of sex hormone binding globulin (SHBG), as well as insulin-like growth factor binding protein 1/2 (IGFBP1/2). Although some of these estimates did not pass multiple testing in INTERVAL, the concordance in estimates in terms of effect size and direction of effect suggests that this is an issue of power.
 
 \blandscape
 (ref:scaption-DiRECT-INTERVAL) Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL
@@ -129,16 +128,9 @@ include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison.pdf", dpi = NA
 
 ## Discussion
 
-Unfinished
+In this chapter, a clinical trial implementing caloric restriction-induced weight loss was utilised as a second line of evidence to assess the effect of BMI on the plasma proteome. This analysis provided evidence for a broad effect of weight loss on the plasma proteome, providing results the effect of calroic restriction on the most extensive set of proteins to date. Comparisons of protein effects across the different study designs (INTERVAL in Chapter \@ref(BMI-protein-MR)) points towards proteins of interest which may be involved in the development or progression of obesity-associated cardiometabolic disease. Proteins which are only altered in one study design could also provide useful biological information as to how the individual protein may relate to adiposity.
 
-In this chapter, a clinical trial implementing caloric restriction-induced weight loss was utilised as a second line of evidence to assess the effect of BMI on the plasma proteome. This analysis provided evidence for a broad effect of weight loss on the plasma proteome, providing results for the most extensive set of proteins to date. Comparisons of protein effects across the different study designs (INTERVAL in Chapter \@ref(BMI-protein-MR)) points towards proteins of interest which may be involved in the development or progression of obesity-associated cardiometabolic disease. Proteins which are only altered in one study design may also provide useful biological information as to how the individual protein may relate to adiposity.
-
-Table \@ref(tab:weight-loss-protein) provides a summary of findings from the literature from previous studies which have explored the effect of caloric restriction on plasma proteins. As detailed in the table, previous studies have mainly used mass spectrometry. One study used SomaLogic [@Carayol2017], however this was the panel that only included 1129 proteins. The current study utilised over fourfold more proteins, therefore providing more in depth readouts of biological processes. Findings are in concordance with previous studies, with various proteins replicating [@Geyer2016; @Figarska2020; @OllerMoreno2018; @Piening2018; @Carayol2017; @Bruderer2019]. These include changes in leptin, apolipoprotein F, SHBG, IGFBP1/2 and GHR. This suggests that these protein changes replicate across studies and across proteomic platforms. This study also provides some novel proteins associated with BMI change including SCAR5, chondroadherin (CHAD), fumarylacetoacetase (FAAA) and aminoacylase-1. 
-
-SCAR5 is involved in mediating commitment of mesenchymal stem cells into adipocytes and is highly expressed in white adipose tissue (WAT) [@Lee2017a]. ** THis is counterintuitive**, chondroadherin downregulated with 12 week exercise training - extracellular matrix protein. Chad-/- mice show cartilage bone abnormalities. Weight loss increases CHAD - this would be beneficial for bones. Iozzo 2015.
-
-Comment about INTERVAL proteins enriched for CVD and they are reversed here... 
-
+The current study identified 144 BMI-related protein changes that were consistent across both models. This includes a reduction in BMI reducing levels of apolipoprotein F and GHR, while increasing levels of SHBG and IGFBP1/2. Table \@ref(tab:weight-loss-protein) provides a summary of findings from the literature from previous studies which have explored the effect of caloric restriction on plasma proteins. As detailed in the table, previous studies have mainly used mass spectrometry. One study used SomaLogic [@Carayol2017], however this was the panel that only included 1129 proteins. The current study utilised over fourfold more proteins, therefore providing more in depth readouts of biological processes. Findings are in concordance with previous studies, with various proteins replicating [@Geyer2016; @Figarska2020; @OllerMoreno2018; @Piening2018; @Carayol2017; @Bruderer2019]. This suggests that these protein changes replicate across studies and across proteomic platforms and therefore robust associations. This study also provides some novel proteins associated with BMI change including SCAR5, chondroadherin (CHAD), fumarylacetoacetase (FAAA) and aminoacylase-1.
 
 ```{r weight-loss-protein,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -176,20 +168,39 @@ column_spec(4, width = "7cm") %>%
   landscape()
 ```
 
-The comparison of results from the previous chapter (Chapter \@ref(BMI-protein-MR)), which used Mendelian randomization and observational epidemiology to assess the effect of average higher BMI across a population on avergae protein levels, with results from a randomised control trial, with the current chapter provides two separate lines of evidence to suggest a causal role of BMI in levels of various proteins. The combination of results therefore points towards proteins which could be targetable in the prevention of obesity-related diseases. These include xx, xx and xx.
+This study also detected some novel associations. A reduction in BMI led to an increase in plasma levels of SCAR5. This protein is involved in mediating commitment of mesenchymal stem cells into adipocytes and is highly expressed in white adipose tissue (WAT) [@Lee2017a]. A reduction in BMI also increased levels of chondroadherin (CHAD). Chondroadherin is a protein which is important in regulating exctracellular matrix organisation in cartilage and bones [@Hessle2013; @Iozzo2015]. CHAD knockout mouse shows decreased bone strength compared with wildtype [@Hessle2013]. This suggests that weight reduction may be beneficial for bone strength. The function of these proteins and relationship with adiposity needs to be further characterised.
 
-Protein involvement in disease.
+The comparison of results from the previous chapter (Chapter \@ref(BMI-protein-MR)), which used Mendelian randomization and observational associations to assess the effect of average higher BMI across a population on avergae protein levels, with results from a randomised control trial in the current chapter provides two separate lines of evidence to suggest a causal role of BMI in levels of various proteins. The analysis in INTERVAL suggested that proteins most altered by BMI were enriched for diseases such as cardiovascular disease and metabolic disease. As the estimates for the effect of BMI on proteins were consistent across both DiRECT and INTERVAL, this suggests that weight loss is able to reverse the protein changes observed with higher BMI, thereby potentially reducing disease risk. The enrichment results comparing the 144 proteins, which were altered with BMI change, to the full 4601 proteins tested confirmed this \@ref(tab:DAVID-enrichment-DiRECT). There was strongest evidence for enrichment of proteins involved in metabolic disease (1.4 fold enrichment, Bonferroni-adjusted P value 4.21x10^-3^). 
 
-Limitations and future steps - mention bybandsleeve ??
+Stringdb - platelet function enrichment?
 
-Conclusions.
+```{r DAVID-enrichment-DiRECT,  echo=FALSE}
+options(knitr.kable.NA = "")
+Term = c('Metabolic', 'Renal', 'Neurological', 'Psych', 'Pharmacogenomic', 'Cancer', 'Reproduction', 'Normal variation', 'Aging', 'Cardiovascular')
+Count = c(73,34,49,36,51,56,25,16,21,56)
+Percentage = c(53,24,35,26,37,40,18,12,15,40)
+List <- c(118,118,118,118,118,118,118,118,118,118 )
+Pophits <- c(1451,518,884,589,964,1093,381,209,324,1214)
+Poptotal <- c(3204, 3204,3204,3204,3204,3204,3204,3204,3204,3204)
+FE <- c(1.4,1.8,1.5,1.7,1.4,1.4,1.8,2.1,1.8,1.2)
+Pval <- c('2.34E-04','5.72E-04','9.61E-04','1.38E-03','2.11E-03','2.23E-03','4.49E-03','8.09E-03','1.21E-02','2.51E-02')
+Bonf_adj_P <- c('4.21E-03','1.02E-02','1.72E-02','2.45E-02','3.74E-02','3.94E-02','7.79E-02','1.36E-01','1.96E-01','3.68E-01')
+mytable = data.frame(cbind(Term, Count, Percentage, List, Pophits, Poptotal, FE, Pval, Bonf_adj_P))
+colnames(mytable) <- c('Term (Genetic Association Database disease class)',	'Count',	'%',	'List Total','	Population Hits',	'Population Total',	'Fold Enrichment',	'P Value',	'Bonferroni-adjusted P value' )
+mytable %>% kable(caption = "DiRECT protein enrichment results for disease class using DAVID bioinformatics 6.8", booktabs = TRUE) %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "5cm")   %>%
+  landscape()
+```
+
+Divergence in estimates across study designs also provides some insight into the biology due to the nature of each study design. In general, the MR study design provides information on the effect that high BMI has over the lifecourse. In contrast, the estimates in DiRECT are the effect of a relatively short-term weight loss (1 year) has on the proteome. A protein may be altered in the MR study, but not after a weight loss intervention becase xx. A protein may also not have evidence for a causal relationship in the MR but be altered in DiRECT. This could be because the protein is a signal of starvation or other changes that happen with caloric restriction.
+
+Limitations from the current analysis include possible protein effects that are not caused by a change in BMI. Despite the use of the treatment group as an instrument in a two stage least squares analysis, the treatment group was also associated with an alteration in other factors as those who were allocated TDR also were taken off any T2D medication and were more likely to remiss their diabetes. It is possible that the analysis is therefore picking up protein effects that are caused by a change in medication or diabetes remission.
+
+Overall, this study provided evidence that weight loss leads to an alteration in various proteins. There was consistency in the direction of effects between the Mendelian randomization for the effect of higher BMI on protein levels and the estimates for the effect of BMI change on protein change in this randomized control trial. 
 
 
-
- 1. Overall effect
- 4. Biology - inflammation?
- 5. Implications for platelet function / thrombosis. Stringdb. input beta coefficients with uniprot IDs and there is pathway enrichment for platelet function and platelet aggregation (256 genes).
- 6. limitations - not solely weight loss effect
 
 - Apolipoprotein F (APOF) two smaple MR causal effect on myocardial infarction and coronary heart disease by Wald ratio.
 - SHBG MR - increased shbg leads to reduction in cardioembolic stroke, platelet count.
